Fix password type on registration page

--- a/themes/bootstrap/registration.html
+++ b/themes/bootstrap/registration.html
@@ -41,7 +41,7 @@
 								<label class="log-lab">{$lang.mail}</label>
 								<input name="mail" type="text" class="login-input-pass" />
 								<label class="log-lab">Password</label>
-								<input name="pass" type="text" class="login-input-pass" /><br /> 
+								<input name="pass" type="password" class="login-input-pass" /><br /> 
 								<input type="submit" name="submit" value="{$lang.registration}" class="btn"/>
 						   	  </form>
 						</div>
