--- a/themes/bootstrap/404.html
+++ b/themes/bootstrap/404.html
@@ -23,10 +23,7 @@
                         <!-- Start Error Red -->
                         <div class="error-page">
                         	<img src="themes/default/img/icons/error/error-red-big.png" width="91" height="91" alt="icon" />
-                            <h2 class="red">Opps... Url Not Avaible ! </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
-                            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat, sed diam nonummy nibh euismod. </p>
-                            <div class="padding30"><a href="index.html" class="button">Go Back</a></div>
+                            <h2 class="red">Opps... Url Not Available ! </h2> 
                         </div>
                         <!-- End Error Red -->
  
