--- a/themes/bootstrap/header.html
+++ b/themes/bootstrap/header.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">{$Name}</a>
+          <a class="brand" href="{$getConfigs.baseurl}/">{$Name}</a>
           <div class="nav-collapse collapse">
  
             <ul class="nav">
