Little title fix.

--- a/themes/bootstrap/admincp.plugins.html
+++ b/themes/bootstrap/admincp.plugins.html
@@ -1,4 +1,4 @@
-{include file="header.html" title=Pastes} 
+{include file="header.html" title=Plugins} 
  
       <div class="row-fluid">
 			{include file="admin.sidebar.html"} 
