--- a/themes/bootstrap/admincp.settings.html
+++ b/themes/bootstrap/admincp.settings.html
@@ -121,7 +121,22 @@
 			{/foreach}
 
             <div class="base-block">
-              <div class="title">Submit</div>   
+              <div class="title">Captcha settings</div>
+
+			<div class="control-group">
+			<label class="control-label" for="use_captcha">Use Captcha</label>
+				<div class="controls">
+					<select name="use_captcha" id="use_captcha" class="uniform" data-placement="right" rel="tooltip" data-original-title="Use Captcha">
+						<option value="yes"{if $getConfigs.use_captcha eq 'yes' || $getConfigs.use_captcha eq null} selected{/if}>Yes</option>
+						<option value="no"{if $getConfigs.use_captcha eq 'no'} selected{/if}>No</option>
+					</select>
+				</div>
+			</div>
+
+			</div>
+
+            <div class="base-block">
+              <div class="title">Submit</div>
 
             <input type="submit" name="submit" value="Submit" class="btn btn-primary"/>
 				
