Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Php-pastebin by atmoner</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Php-pastebin : Php-pastebin" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Php-pastebin</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Php-pastebin</h1>
-        <p class="header">Php-pastebin</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/atmoner/php-pastebin-v3/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/atmoner/php-pastebin-v3/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/atmoner/php-pastebin-v3">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/atmoner/php-pastebin-v3">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/atmoner">atmoner</a></p>
+          <h1 id="project_title">Php-pastebin</h1>
+          <h2 id="project_tagline">Php-pastebin</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/atmoner/php-pastebin-v3/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/atmoner/php-pastebin-v3/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
-        <h1>Php-pastebin V3</h1>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
+<a name="php-pastebin-v3" class="anchor" href="#php-pastebin-v3"><span class="octicon octicon-link"></span></a>Php-pastebin V3</h1>
 
 <hr><ul>
 <li>  <a href="#what-is-php-pastebin" title="What is Php-pastebin?">What is Php-pastebin?</a>
@@ -43,7 +45,8 @@
 </li>
 <li>  <a href="#thanks" title="Thanks">Thanks</a>
 </li>
-</ul><h3>What is Php-pastebin?</h3>
+</ul><h3>
+<a name="what-is-php-pastebin" class="anchor" href="#what-is-php-pastebin"><span class="octicon octicon-link"></span></a>What is Php-pastebin?</h3>
 
 <blockquote>
 <p>Pastebin is here to help you collaborate on debugging code snippets.<br>
@@ -55,7 +58,8 @@ If you're not familiar with the idea, most people use it like this:  </p>
 </li>
 <li>  Getting a url like <a href="http://demo.php-pastebin.com/DSNnglex">http://demo.php-pastebin.com/DSNnglex</a>,</li>
 <li>  paste the url into an IRC or IM conversation, someone responds by reading and perhaps submitting a modification of your code, you then view the modification, maybe using the built in diff tool to help locate the changes</li>
-</ul><h3>How to install php-pastebin?</h3>
+</ul><h3>
+<a name="how-to-install-php-pastebin" class="anchor" href="#how-to-install-php-pastebin"><span class="octicon octicon-link"></span></a>How to install php-pastebin?</h3>
 
 <p>To install php-pastebin, you do not need much!  </p>
 
@@ -71,7 +75,8 @@ Follow the installation instructions.</p>
 
 <p>Once the installation is complete, you must delete the install.php file, libs/db.sql and put a chmod 644 on the file libs/db.php</p>
 
-<h3>How to upgrade v2 to v3?</h3>
+<h3>
+<a name="how-to-upgrade-v2-to-v3" class="anchor" href="#how-to-upgrade-v2-to-v3"><span class="octicon octicon-link"></span></a>How to upgrade v2 to v3?</h3>
 
 <p>To update your version of php-pastebin, you must:  </p>
 
@@ -96,11 +101,13 @@ Follow the installation instructions.</p>
 </ul>
 </li>
 <li> Remove upgrade.php and go on your website</li>
-</ol><h3>Demonstration</h3>
+</ol><h3>
+<a name="demonstration" class="anchor" href="#demonstration"><span class="octicon octicon-link"></span></a>Demonstration</h3>
 
 <p><a href="http://demo.php-pastebin.com/" title="Demonstration">Demonstration</a></p>
 
-<h3>Thanks</h3>
+<h3>
+<a name="thanks" class="anchor" href="#thanks"><span class="octicon octicon-link"></span></a>Thanks</h3>
 
 <p>For safety tests, thanks to:</p>
 
@@ -120,11 +127,17 @@ Follow the installation instructions.</p>
 </li>
 </ul>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Php-pastebin maintained by <a href="https://github.com/atmoner">atmoner</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
