--- a/themes/bootstrap/admincp.settings.html
+++ b/themes/bootstrap/admincp.settings.html
@@ -46,6 +46,7 @@
                            	  		  <option value="en">English</option>
                            	  		  <option value="fr">French</option>
                            	  		  <option value="ru">Russe</option>
+                           	  		  <option value="nl">Dutch</option>
                                		</select>
 				</div>
 			</div>
